plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '6.0.0'
}

mainClassName = 'com.chipset.main.Bot'
version '1.1'
sourceCompatibility = 11

repositories {
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    maven { url "https://m2.chew.pro/snapshots" }
    maven { url "https://jitpack.io" }
    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
    mavenCentral()
}

dependencies {
    implementation 'net.dv8tion:JDA:5.0.0-beta.17'
    implementation 'ch.qos.logback:logback-classic:1.4.5'
    implementation("com.squareup.okhttp3:okhttp:4.9.3")
    implementation('org.json:json:20230227')
    implementation 'io.github.cdimascio:dotenv-java:2.3.1'
    implementation 'com.opencsv:opencsv:5.7.1'
    implementation 'pw.chew:jda-chewtils:2.0-SNAPSHOT'
    implementation 'com.github.walkyst:lavaplayer-fork:1.4.0'
    implementation 'org.reflections:reflections:0.10.2'
    implementation 'com.github.aikaterna:lavaplayer-natives:original-SNAPSHOT'

    implementation group: 'edu.cmu.sphinx', name: 'sphinx4-core', version:'5prealpha-SNAPSHOT'
    implementation group: 'edu.cmu.sphinx', name: 'sphinx4-data', version:'5prealpha-SNAPSHOT'
}

compileJava.options.encoding = 'UTF-8'
targetCompatibility = JavaVersion.VERSION_11
